# AMR

./: .gitignore  CMakeLists.txt  Contributing.md  License.md  Readme.md
Include/AMR/Expression/: CommonExpressionNodes.hpp  ExpressionNode.hpp  ExpressionTree.hpp
Include/AMR/Sets/: Element.hpp  FiniteSet.hpp  Set.hpp
Source/: AMRConfigure.hpp.in  CMakeLists.txt  temp.cpp
Source/Expression/: CommonExpressionNodes.cpp  ExpressionNode.cpp
Source/Sets/: Element.cpp  FiniteSet.cpp
Tests/: CMakeLists.txt
Tests/Expression/: CommonExpressionNodes.test.cpp  ExpressionNode.test.cpp  ExpressionTree.test.cpp
Tests/Sets/: Element.test.cpp  FiniteSet.test.cpp
